2023-10-01T00:49:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6366780560 # 1945
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-01
* notice: last 14d: unq all: 7 28
* notice: prev accum: outdated-unq outdated-all / unq all: 605 1752 / 611 1779
* notice: next accum: outdated-unq outdated-all / unq all: 605 1752 / 612 1780
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-30]

2023-09-30T16:10:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6364073928 # 1944
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
* notice: last 14d: unq all: 6 27
* notice: prev accum: outdated-unq outdated-all / unq all: 604 1747 / 611 1779
* notice: next accum: outdated-unq outdated-all / unq all: 605 1752 / 611 1779
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-16] / []

2023-09-30T00:41:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6358804039 # 1942
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
* notice: last 14d: unq all: 7 32
* notice: prev accum: outdated-unq outdated-all / unq all: 602 1734 / 611 1779
* notice: next accum: outdated-unq outdated-all / unq all: 604 1747 / 611 1779
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-15] / []

2023-09-27T16:12:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6328597006 # 1935