@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-01T00:49:10Z",
+  "timestamp" : "2023-10-01T16:10:43Z",
   "count_outdated" : 1752,
   "uniques_outdated" : 605,
-  "count" : 1780,
-  "uniques" : 612,
+  "count" : 1781,
+  "uniques" : 613,
   "views" : [
     {
       "timestamp": "2023-09-18T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-09-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
