@@ -1,6 +1,6 @@
 {
-  "count": 28,
-  "uniques": 7,
+  "count": 29,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2023-09-18T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2023-09-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
